# napalm_netgear

./: README.md  pyproject.toml
napalm_netgear/: __init__.py  netgear.py  parser.py
