[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "napalm_netgear"
version = "0.0.1"
authors = [
    { name="shrank", email="info@murxs.ch" },
]
license = { file = "LICENSE" }
readme = "README.md"
description = "NAPALM module for Netgear switches"
requires-python = ">=3.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
keywords = ["network", "automation", "netgear"]
dependencies = [
    "napalm"
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/shrank/napalm_netgear"
